navbar overlap error resolve

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 10vh;
     display: flex;
+    z-index: 999;
     border-bottom: 1px solid rgb(173, 173, 173, 0.6);
 }
 
@@ -71,5 +72,5 @@
     padding: 10px 35px;
     color: #ffffff;
     text-decoration: none;
-    border-radius: 4px; 
+    border-radius: 4px;
 }
